simulator-infra-vpc-setup.yml
#--------------------------------------------------------------------------------------------------------------------
#
# Simulator Infrastructure Component Setup
#
# Deepak Shenoy
#
# Feb 2023
#
#--------------------------------------------------------------------------------------------------------------------

AWSTemplateFormatVersion: 2010-09-09
Description: VPC Setup for the Simulator Setup

Mappings:
  SimulatorEnvironment:
    Settings:
      EnvName: simulator-env
      VpcCIDR: 10.192.0.0/16
      PublicSubnet1CIDR: 10.192.10.0/24
      PublicSubnet2CIDR: 10.192.11.0/24
      PrivateSubnet1CIDR: 10.192.20.0/24
      PrivateSubnet2CIDR: 10.192.21.0/24

Resources:
  SimVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [SimulatorEnvironment, Settings, VpcCIDR]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: AppCode
          Value: SimSys
        - Key: Name
          Value: Simulator Environment

  SimInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: AppCode
          Value: SimSys
        - Key: Name
          Value: SimSys
        - Key: Description
          Value: Simulator Environment Internet Gateway

  SimInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref SimInternetGateway
      VpcId: !Ref SimVPC

  SimPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SimVPC
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      CidrBlock: !FindInMap [SimulatorEnvironment, Settings, PublicSubnet1CIDR]
      Tags:
        - Key: AppCode
          Value: SimSys

  SimPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SimVPC
      AvailabilityZone: !Select [1, !GetAZs 'us-east-1']
      CidrBlock: !FindInMap [SimulatorEnvironment, Settings, PublicSubnet2CIDR]
      Tags:
        - Key: AppCode
          Value: SimSys

  SimPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SimVPC
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      CidrBlock: !FindInMap [SimulatorEnvironment, Settings, PrivateSubnet1CIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: AppCode
          Value: SimSys

  SimPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SimVPC
      AvailabilityZone: !Select [1, !GetAZs 'us-east-1']
      CidrBlock: !FindInMap [SimulatorEnvironment, Settings, PrivateSubnet2CIDR]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: AppCode
          Value: SimSys

  SimNatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: SimInternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: AppCode
          Value: SimSys

  SimNatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: SimInternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: AppCode
          Value: SimSys

  SimNatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt SimNatGateway1EIP.AllocationId
      SubnetId: !Ref SimPublicSubnet1
      Tags:
        - Key: AppCode
          Value: SimSys

  SimNatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt SimNatGateway2EIP.AllocationId
      SubnetId: !Ref SimPublicSubnet2
      Tags:
        - Key: AppCode
          Value: SimSys

  SimPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SimVPC
      Tags:
        - Key: Name
          Value: SimSys
        - Key: AppCode
          Value: SimSys

  SimDefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: SimInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref SimPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SimInternetGateway

  SimPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimPublicRouteTable
      SubnetId: !Ref SimPublicSubnet1

  SimPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimPublicRouteTable
      SubnetId: !Ref SimPublicSubnet2

  SimPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SimVPC
      Tags:
        - Key: Name
          Value: SimSys
        - Key: AppCode
          Value: SimSys

  SimDefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref SimPrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref SimNatGateway1

  SimPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimPrivateRouteTable1
      SubnetId: !Ref SimPrivateSubnet1

  SimPrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SimVPC
      Tags:
        - Key: Name
          Value: SimSys
        - Key: AppCode
          Value: SimSys

  SimDefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref SimPrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref SimNatGateway2

  SimPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimPrivateRouteTable2
      SubnetId: !Ref SimPrivateSubnet2

  SimNoIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "no-ingress-sg"
      GroupDescription: "Security group with no ingress rule"
      VpcId: !Ref SimVPC
      Tags:
        - Key: Name
          Value: SimSys
        - Key: AppCode
          Value: SimSys


Outputs:
  VPC:
    Description: Reference to the created VPC
    Value: !Ref SimVPC

  PublicSubnets:
    Description: List of the public subnets
    Value: !Join [",", [!Ref SimPublicSubnet1, !Ref SimPublicSubnet2 ]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref SimPrivateSubnet1, !Ref SimPrivateSubnet2 ] ]

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref SimPublicSubnet1

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref SimPublicSubnet2

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref SimPrivateSubnet1

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref SimPrivateSubnet2

  NoIngressSecurityGroup:
    Description: Security group with no ingress rule
    Value: !Ref SimNoIngressSecurityGroup
